feat: add regeneration path for config in changes in studio
