# internal/studio/oas_studio.yaml
@@ -45,24 +45,27 @@ paths:
             schema:
               type: object
               properties:
+                target_id:
+                  type: string
+                  description: The target ID to run
                 overlay:
                   type: string
                   description: The studio modifications overlay contents - this should be an overlay YAML document
                 input:
                   type: string
                   description: The input spec for the source
-                config:
+                target:
                   type: object
                   properties:
-                    data:
+                    id:
                       type: string
-                      description: The config edit for the source
-                    path:
+                      description: The name of the target
+                    config:
                       type: string
-                      description: The local path to config file
+                      description: the config file data
                   required:
-                    - data
-                    - path
+                    - id
+                    - config
       responses:
         "200":
           description: Successful response
